feat(appeals-service-api): add a service to insert already valued appeal
