# appeals-service-api/api/openapi.yaml
@@ -11,7 +11,7 @@ servers:
   - url: 'http://localhost:3000/'
 paths:
   '/api/v1/appeals':
-    post:
+    get:
       summary: Creates a new appeal
       description: A newly created appeal will have a DRAFT state and all subsections will have NOT STARTED state. The id will be a uuid and the returned representation of the new appeal will be valid so it can be submitted as a PUT payload 'as is'.
       tags:
@@ -22,7 +22,40 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Appeal'
+                $ref: '#/components/schemas/ExistingAppeal'
+    post:
+      summary: Insert a new appeal
+      description: The provided appeal will be inserted if it complies with all format and business validation rules. Nothing is inserted if there are any validation failures and the errors will be listed in the response. The sections state fields are required to be passed explicitly in all requests while any omitted fields will have default values substituted so that each field matches their values in a newly created appeal. The id field has to be empty as this service won't allow any update of an existing appeal.
+      tags:
+        - Appeals
+      requestBody:
+        description: Insert an already valued Appeal
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Appeal'
+        required: true
+      responses:
+        '202':
+          description: Returns the inserted appeal with its new id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExistingAppeal'
+        '400':
+          description: Returns a collection of errors generated by the invalid input
+          content:
+            application/json:
+              schema:
+                properties:
+                  code:
+                    type: number
+                    example: 400
+                  errors:
+                    type: array
+                    items:
+                      type: string
+                      example: 'requiredDocumentsSection.originalApplication.uploadedFile.id must be a valid UUID'
   '/api/v1/appeals/{id}':
     get:
       summary: Returns an existing appeal
@@ -43,7 +76,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Appeal'
+                $ref: '#/components/schemas/ExistingAppeal'
         '404':
           description: The appeal could not be found
     put:
@@ -64,7 +97,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Appeal'
+              $ref: '#/components/schemas/ExistingAppeal'
         required: true
       responses:
         '200':
@@ -136,9 +169,6 @@ components:
     Appeal:
       type: object
       properties:
-        id:
-          type: string
-          format: uuid
         lpaCode:
           type: string
           example: 'E60000281'
@@ -161,6 +191,15 @@ components:
         sectionStates:
           $ref: '#/components/schemas/SectionStates'
       description: All of the data and state information for an appeal
+    ExistingAppeal:
+      allOf:
+        - $ref: '#/components/schemas/Appeal'
+      type: object
+
+      properties:
+        id:
+          type: string
+          format: uuid
     AppealSiteSection:
       type: object
       properties:
